Fixes for gap bug (pariwisata)

--- a/styles/pariwisata.css
+++ b/styles/pariwisata.css
@@ -1,8 +1,3 @@
-html,body{
-    width: 100%;
-    overflow-x: hidden;
-}
-
 /* SECTIONS */
 .section-title{
     text-align: left;
@@ -77,7 +72,8 @@ html,body{
 .main-title-container{
     position: absolute;
     top: 50vh;
-    left: 48px;
+    width: 90%;
+    overflow-x: hidden;
 }
 
 button{
